gh-pages版本正式上线
添加了2016冬番数据

--- a/css/fall.css
+++ b/css/fall.css
@@ -4,3 +4,4 @@
 .navbar-collapse,.navbar-form,.navbar-default .nav-toggle,.navbar-toggle{border-color: #fff!important;}
 .page-header{color: #FF9966;border-bottom: 1px solid #FF9966}
 .thumbnail{border-color: #FF9966;}
+footer{background-color: #FF9966;}
