--- a/css/spring.css
+++ b/css/spring.css
@@ -4,3 +4,4 @@
 .navbar-collapse,.navbar-form,.navbar-default .nav-toggle,.navbar-toggle{border-color: #fff!important;}
 .page-header{color: #66CC66;border-bottom: 1px solid #66CC66}
 .thumbnail{border-color: #66CC66;}
+footer{background-color: #66CC66;}
