--- a/css/summer.css
+++ b/css/summer.css
@@ -4,3 +4,4 @@
 .navbar-collapse,.navbar-form,.navbar-default .nav-toggle,.navbar-toggle{border-color: #fff!important;}
 .page-header{color: #339966;border-bottom: 1px solid #339966}
 .thumbnail{border-color: #339966;}
+footer{background-color: #339966;}
