--- a/css/winter.css
+++ b/css/winter.css
@@ -4,3 +4,4 @@
 .navbar-collapse,.navbar-form,.navbar-default .nav-toggle,.navbar-toggle{border-color: #fff!important;}
 .page-header{color: #66CCFF;border-bottom: 1px solid #66CCFF}
 .thumbnail{border-color: #66CCFF;}
+footer{background-color: #66CCFF;}
